feat(agent): compose durable run response service